# v2c

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  RUNBOOK.md  SYSTEM_DESIGN_CN.md  compose.yaml  pyproject.toml
config/: funasr.example.toml  local.example.toml
design_handoff_pcn_frontend/: PCN 交互原型.dc.html  React 改造清单.dc.html  v2c 前端设计稿.dc.html  v2c 前端调研报告.dc.html
docs/: local-web-control-panel.md  redesign-usage-walkthrough.md
scripts/: asr_wrapper_example.py  clean_abnormal_2087_imports.py  funasr_campplus_embed_wrapper.py  funasr_emotion2vec_wrapper.py  funasr_paraformer_diarize_wrapper.py  funasr_sensevoice_wrapper.py  funasr_vad_wrapper.py  glm_llm_wrapper.py  import-device.sh  llm_wrapper_example.py  run_sample_asr_batch.py  start-web.sh
tests/: test_active_annotation_view.py  test_active_memory_view.py  test_active_transcripts.py  test_agent_cli.py  test_agent_session_schema.py  test_agent_sessions.py  test_architecture.py  test_archive.py  test_archive_cli.py  test_asr_port.py  test_audio_preprocessing.py  test_audio_transcode.py  test_campplus_embed_wrapper.py  test_clean_abnormal_2087_imports.py  test_cli.py  test_codex_agent_batch.py  test_codex_session_import_e2e.py  test_codex_session_jsonl.py  test_command_archive.py  test_command_asr.py  test_command_asr_cli.py  test_command_embed.py  test_command_emotion.py  test_command_llm.py  test_command_llm_cli.py  test_command_runner.py  test_command_timeout_wiring.py  test_command_vad.py  test_command_vad_cli.py  test_concurrent_drain.py  test_config.py  (+121 more)
(+289 files in other folders)
