[project]
name = "personal-context-node"
version = "0.1.0"
description = "Local-first audio-to-context pipeline for Personal Context Node"
readme = "SYSTEM_DESIGN_CN.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
]

[project.scripts]
pcn = "personal_context_node.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
