[project]
name = "personal-context-node"
version = "0.1.0"
description = "Local-first audio-to-context pipeline for Personal Context Node"
readme = "SYSTEM_DESIGN_CN.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "numpy>=2.0.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.3",
    "typer>=0.12.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
funasr = [
    "funasr>=1.2.0",
    "modelscope>=1.14.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
]

[project.scripts]
pcn = "personal_context_node.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_context_node"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "scikit-learn>=1.4.0",
    "umap-learn>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
